--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,4 @@ REDIRECT_URL = "http://localhost:3000"
 
 TOPIC_NAME="projects/companion-382104/topics/companion"
 TOPIC_CALL_BACK_URL="https://companionpmsollution.online"
-
-OPENAI_API_KEY="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"
+OPENAI_API_KEY=""
