--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ REDIRECT_URL = "http://localhost:3000"
 TOPIC_NAME="projects/companion-382104/topics/companion"
 TOPIC_CALL_BACK_URL="https://companionpmsollution.online"
 OPENAI_API_KEY=""
+HUGGINGFACE_ACCESS_TOKEN=""
+
