webhook to watch incoming emails added

--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 NODE_ENV="development"
-PORT=8000
+PORT=8888
 MONGO_URL="mongodb+srv://jithinksunil:bbVTjDcPP0LK1Tjp@cluster0.4tsmuax.mongodb.net/emailExtractor?retryWrites=true&w=majority"
 CORS_LINK="http://localhost:3000"
 
-CLIENT_ID = "93020084319-i3o7esrnhhtahor71299kq1d7n3qk34f.apps.googleusercontent.com"
-CLIENT_SECRET = "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"
+CLIENT_ID = "85567066272-3brijv7rqf37vrlm7ajs9npntt7a74j1.apps.googleusercontent.com"
+CLIENT_SECRET = "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"
 REDIRECT_URL = "http://localhost:3000"
 
-TOPIC_NAME="projects/companion-382104/topics/companion"
-TOPIC_CALL_BACK_URL="https://companionpmsollution.online"
+TOPIC_NAME="projects/companion-382104/topics/emailExtractor"
+TOPIC_CALL_BACK_URL="https://5477-2401-4900-6666-f75e-cba6-59d4-6f32-74b8.ngrok-free.app/api/webhook"
+OPENAI_API_KEY="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"
+HUGGINGFACE_ACCESS_TOKEN="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"
 
