--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ REDIRECT_URL = "http://localhost:3000"
 
 TOPIC_NAME="projects/companion-382104/topics/emailExtractor"
 TOPIC_CALL_BACK_URL="https://5477-2401-4900-6666-f75e-cba6-59d4-6f32-74b8.ngrok-free.app/api/webhook"
-OPENAI_API_KEY="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"
+OPENAI_API_KEY=""
 HUGGINGFACE_ACCESS_TOKEN="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"
 
